--- a/lab7/package.json
+++ b/lab7/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/dialogflow": "^3.3.0"
+    "@google-cloud/dialogflow": "^3.3.0",
+    "express": "^4.17.1"
   }
 }
